webgpu vite 로 변경

--- a/webgpu02/index.html
+++ b/webgpu02/index.html
@@ -16,6 +16,6 @@
     <br><br>
     <canvas id="canvas-webgpu" width="640" height="480"></canvas>
   </div>
-  <script src="main.bundle.js"></script>
+  <script type="module" src="/src/main.ts"></script>
 </body>
 </html>
