--- a/webgpu-sample/index.html
+++ b/webgpu-sample/index.html
@@ -43,7 +43,10 @@
   <div class="menu">
     <h3>WebGPU Sample</h3>    
     <hr />
-    <a class="sample active" target="00_helloWebgpu">Hello WebGPU</a>    
+    <a class="sample active" target="00_helloWebgpu">Hello WebGPU</a>
+    <a class="sample" target="01_basicTriangle">Basic Triangle</a>
+    <a class="sample" target="02_basicTriangleMSAA">Basic Triangle MSAA</a>
+    <a class="sample" target="03_colorTriangle">Color Triangle</a>
   </div>
   <iframe></iframe>  
   <script>
