--- a/webgpu-sample/index.html
+++ b/webgpu-sample/index.html
@@ -47,6 +47,10 @@
     <a class="sample" target="01_basicTriangle">Basic Triangle</a>
     <a class="sample" target="02_basicTriangleMSAA">Basic Triangle MSAA</a>
     <a class="sample" target="03_colorTriangle">Color Triangle</a>
+    <a class="sample" target="04_rotatingCube">Rotating Cube</a>
+    <a class="sample" target="05_cubes">Cubes</a>
+    <a class="sample" target="06_cubesOffsets">Cubes with Offsets</a>
+    <a class="sample" target="07_cubesDynamicOffsets">Cubes with dynamicOffsets</a>
   </div>
   <iframe></iframe>  
   <script>
