--- a/webgpu-sample/index.html
+++ b/webgpu-sample/index.html
@@ -51,6 +51,7 @@
     <a class="sample" target="05_cubes">Cubes</a>
     <a class="sample" target="06_cubesOffsets">Cubes with Offsets</a>
     <a class="sample" target="07_cubesDynamicOffsets">Cubes with dynamicOffsets</a>
+    <a class="sample" target="08_cubesInstance">Cubes with Instance</a>
   </div>
   <iframe></iframe>  
   <script>
