--- a/webgpu-sample/index.html
+++ b/webgpu-sample/index.html
@@ -52,6 +52,7 @@
     <a class="sample" target="06_cubesOffsets">Cubes with Offsets</a>
     <a class="sample" target="07_cubesDynamicOffsets">Cubes with dynamicOffsets</a>
     <a class="sample" target="08_cubesInstance">Cubes with Instance</a>
+    <a class="sample" target="09_cubesRenderBundle">Cubes with RenderBundle</a>
   </div>
   <iframe></iframe>  
   <script>
