--- a/webgpu-sample/index.html
+++ b/webgpu-sample/index.html
@@ -56,6 +56,8 @@
     <a class="sample" target="10_imageTexture">Image Texture</a>
     <a class="sample" target="11_spriteTexture">Sprites Texture</a>
     <a class="sample" target="12_canvasTexture">Canvas Texture</a>
+    <a class="sample" target="13_videoTexture">Video Texture</a>
+    <a class="sample" target="14_basicLights">Basic Lights</a>
   </div>
   <iframe></iframe>  
   <script>
