--- a/webgpu-sample/index.html
+++ b/webgpu-sample/index.html
@@ -58,6 +58,9 @@
     <a class="sample" target="12_canvasTexture">Canvas Texture</a>
     <a class="sample" target="13_videoTexture">Video Texture</a>
     <a class="sample" target="14_basicLights">Basic Lights</a>
+    <a class="sample" target="15_shadowMapping">Shadow Mapping</a>
+    <a class="sample" target="16_gpuCompute">GPU Compute</a>
+    <a class="sample" target="17_gpuParticles">GPU Particles</a>
   </div>
   <iframe></iframe>  
   <script>
