--- a/orillusion-debug/index.html
+++ b/orillusion-debug/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <script type="module" src="/src/main.ts"></script>
+  <!-- <script type="module" src="/src/samples/00_base/01_AddRemove.ts"></script> -->
+  <script type="module" src="/src/samples/00_base/02_BoundingBox.ts"></script>
 </body>
 </html>
