--- a/orillusion-debug/index.html
+++ b/orillusion-debug/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
   <!-- <script type="module" src="/src/samples/00_base/01_AddRemove.ts"></script> -->
-  <script type="module" src="/src/samples/00_base/02_BoundingBox.ts"></script>
+  <!-- <script type="module" src="/src/samples/00_base/02_BoundingBox.ts"></script> -->
+  <!-- <script type="module" src="/src/samples/00_base/03_ComponentLifeCycle.ts"></script> -->
+  <!-- <script type="module" src="/src/samples/00_base/04_Transform.ts"></script> -->
+  <!-- <script type="module" src="/src/samples/01_Animation/01_CurveAnimation.ts"></script> -->
+  <script type="module" src="/src/samples/01_Animation/02_MorphTarget.ts"></script>
 </body>
 </html>
