--- a/orillusion-debug/index.html
+++ b/orillusion-debug/index.html
@@ -12,6 +12,10 @@
   <!-- <script type="module" src="/src/samples/00_base/03_ComponentLifeCycle.ts"></script> -->
   <!-- <script type="module" src="/src/samples/00_base/04_Transform.ts"></script> -->
   <!-- <script type="module" src="/src/samples/01_Animation/01_CurveAnimation.ts"></script> -->
-  <script type="module" src="/src/samples/01_Animation/02_MorphTarget.ts"></script>
+  <!-- <script type="module" src="/src/samples/01_Animation/02_MorphTarget.ts"></script> -->
+  <!-- <script type="module" src="/src/samples/01_Animation/03_PropertyAnimation.ts"></script> -->
+  <!-- <script type="module" src="/src/samples/01_Animation/04_Skeleton.ts"></script> -->
+  <!-- <script type="module" src="/src/samples/01_Animation/05_Skeleton2.ts"></script> -->
+  <script type="module" src="/src/samples/01_Animation/06_Skeleton3.ts"></script>
 </body>
 </html>
