--- a/orillusion-debug/index.html
+++ b/orillusion-debug/index.html
@@ -16,6 +16,7 @@
   <!-- <script type="module" src="/src/samples/01_Animation/03_PropertyAnimation.ts"></script> -->
   <!-- <script type="module" src="/src/samples/01_Animation/04_Skeleton.ts"></script> -->
   <!-- <script type="module" src="/src/samples/01_Animation/05_Skeleton2.ts"></script> -->
-  <script type="module" src="/src/samples/01_Animation/06_Skeleton3.ts"></script>
+  <!-- <script type="module" src="/src/samples/01_Animation/06_Skeleton3.ts"></script> -->
+  <script type="module" src="/src/samples/02_Graphic/01_DrawMeshLine.ts"></script>
 </body>
 </html>
