--- a/orillusion-debug/index.html
+++ b/orillusion-debug/index.html
@@ -17,6 +17,15 @@
   <!-- <script type="module" src="/src/samples/01_Animation/04_Skeleton.ts"></script> -->
   <!-- <script type="module" src="/src/samples/01_Animation/05_Skeleton2.ts"></script> -->
   <!-- <script type="module" src="/src/samples/01_Animation/06_Skeleton3.ts"></script> -->
-  <script type="module" src="/src/samples/02_Graphic/01_DrawMeshLine.ts"></script>
+  <!-- <script type="module" src="/src/samples/02_Graphic/01_DrawMeshLine.ts"></script> -->
+  <!-- <script type="module" src="/src/samples/02_Graphic/02_GraphicLine.ts"></script> -->
+  <!-- <script type="module" src="/src/samples/04_Geometry/01_ConduitGeometry.ts"></script> -->
+  <!-- <script type="module" src="/src/samples/04_Geometry/02_ConduitGeometry2.ts"></script> -->
+  <!-- <script type="module" src="/src/samples/04_Geometry/03_ConduitGeometry3.ts"></script> -->
+  <!-- <script type="module" src="/src/samples/04_Geometry/04_CustomGeometry.ts"></script> -->
+  <!-- <script type="module" src="/src/samples/04_Geometry/05_InternalGeometry.ts"></script> -->
+  <script type="module" src="/src/samples/04_Geometry/06_VertexAnimation.ts"></script>
+  <!-- <script type="module" src="/src/samples/05_Material/01_ChangeMaterial.ts"></script> -->
+  <!-- <script type="module" src="/src/samples/05_Material/02_ClearCoat.ts"></script> -->  
 </body>
 </html>
