--- a/orillusion-debug/index.html
+++ b/orillusion-debug/index.html
@@ -11,6 +11,7 @@
   <!-- <script type="module" src="/src/samples/00_base/02_BoundingBox.ts"></script> -->
   <!-- <script type="module" src="/src/samples/00_base/03_ComponentLifeCycle.ts"></script> -->
   <!-- <script type="module" src="/src/samples/00_base/04_Transform.ts"></script> -->
+  <script type="module" src="/src/samples/00_base/05_TestObj.ts"></script>
   <!-- <script type="module" src="/src/samples/01_Animation/01_CurveAnimation.ts"></script> -->
   <!-- <script type="module" src="/src/samples/01_Animation/02_MorphTarget.ts"></script> -->
   <!-- <script type="module" src="/src/samples/01_Animation/03_PropertyAnimation.ts"></script> -->
@@ -24,7 +25,7 @@
   <!-- <script type="module" src="/src/samples/04_Geometry/03_ConduitGeometry3.ts"></script> -->
   <!-- <script type="module" src="/src/samples/04_Geometry/04_CustomGeometry.ts"></script> -->
   <!-- <script type="module" src="/src/samples/04_Geometry/05_InternalGeometry.ts"></script> -->
-  <script type="module" src="/src/samples/04_Geometry/06_VertexAnimation.ts"></script>
+  <!-- <script type="module" src="/src/samples/04_Geometry/06_VertexAnimation.ts"></script> -->
   <!-- <script type="module" src="/src/samples/05_Material/01_ChangeMaterial.ts"></script> -->
   <!-- <script type="module" src="/src/samples/05_Material/02_ClearCoat.ts"></script> -->    
 </body>
