--- a/orillusion-debug/index.html
+++ b/orillusion-debug/index.html
@@ -27,6 +27,7 @@
   <!-- <script type="module" src="/src/samples/04_Geometry/06_VertexAnimation.ts"></script> -->
   <!-- <script type="module" src="/src/samples/05_Material/01_ChangeMaterial.ts"></script> -->
   <!-- <script type="module" src="/src/samples/05_Material/02_ClearCoat.ts"></script> -->    
-  <script type="module" src="/src/samples/100_RND/02_GeometryUpload.ts"></script>
+  <!-- <script type="module" src="/src/samples/100_RND/01_ChangeGeomety.ts"></script> -->
+  <script type="module" src="/src/samples/100_RND/02_UpdateGeometry.ts"></script>
 </body>
 </html>
